--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "start": "vue-cli-service serve --port=6202 --open",
+    "serve": "vue-cli-service serve --port=6202 --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
